@@ -36,6 +36,6 @@ public class Configuration {
 
     @Override
     public Configuration clone() { //NOSONAR
-        return new Configuration(this.pairs.stream().map(CardPair::clone).collect(Collectors.toList()));
+        return new Configuration(this.pairs.stream().map(CardPair::clone).toList());
     }
 }
